# manta_v2

./: README.md
manta_v2_bringup/: CMakeLists.txt  README.md  package.xml
manta_v2_bringup/launch/: display.launch.py  manta_bringup.launch.py  manta_pose.launch.py  manta_ros2_control.launch.py
manta_v2_controller/: README.md  package.xml  setup.cfg  setup.py
manta_v2_controller/launch/: joint_states.launch.py  robot_control.launch.py
manta_v2_controller/manta_v2_controller/: servo_node.py  walking_motion_node.py  wing_motion_node.py
manta_v2_controller/manta_v2_controller/control_modules/: adafruit_servokit_writer.py  flapping_driver.py  servo_globals.py  tripod_driver.py
manta_v2_description/: CMakeLists.txt  README.md  package.xml
manta_v2_description/meshes/: link_Lbtm_end_1.stl  link_Lbtm_pitch_1.stl  link_Lbtm_roll1_1.stl  link_Lbtm_roll2_1.stl  link_Lmid_end_1.stl  link_Lmid_pitch_1.stl  link_Lmid_roll1_1.stl  link_Lmid_roll2_1.stl  link_Ltop_end_1.stl  link_Ltop_pitch_1.stl  link_Ltop_roll1_1.stl  link_Ltop_roll2_1.stl  link_Rbtm_end_1.stl  link_Rbtm_pitch_1.stl  link_Rbtm_roll1_1.stl  link_Rbtm_roll2_1.stl  link_Rmid_end_1.stl  link_Rmid_pitch_1.stl  link_Rmid_roll1_1.stl  link_Rmid_roll2_1.stl  link_Rtop_end_1.stl  link_Rtop_pitch_1.stl  link_Rtop_roll1_1.stl  link_Rtop_roll2_1.stl  link_ballast_1.stl  link_rs_camera_1.stl
manta_v2_description/ros2_control/: manta_v2_ros2_control.xacro
manta_v2_description/rviz/: run_move_group.rviz  rviz_file_memo.md  urdf.rviz  urdf_with_imu.rviz  urdf_with_pose.rviz
manta_v2_description/urdf/: manta_v2.gazebo  manta_v2.trans  manta_v2.xacro  manta_v2_description.xacro  materials.xacro
manta_v2_gazebo_ros2_control/: CMakeLists.txt  README.md  package.xml
manta_v2_gazebo_ros2_control/config/: floating_sphere_with_fin_controller.yaml  manta_v2_move_group_controller.yaml  manta_v2_trajectory_controller.yaml  manta_v2_trajectory_controller_test.yaml
manta_v2_gazebo_ros2_control/launch/: move_group_controller.launch.py  sphere_plankton.launch.py  sphere_with_fin.launch.py  stl_to_ocean.launch.py  trajectory_controller.launch.py  trajectory_plankton.launch.py
manta_v2_gazebo_ros2_control/scripts/: inertial_calculator.py  volume_calculator.py
manta_v2_gazebo_ros2_control/src/: example_position.cpp  quadruped_pace.cpp  quadruped_torotto.cpp  quadruped_torotto_rear.cpp  quadruped_torotto_rotate.cpp  tripod_init.cpp  tripod_motion.cpp  tripod_rear.cpp  tripod_rotate.cpp  wing_init.cpp  wing_motion.cpp
manta_v2_gazebo_ros2_control/urdf/: floating_sphere.urdf  floating_sphere_with_fin.urdf  manta_v2.urdf  manta_v2_geometric_buoyancy.urdf  manta_v2_moveit.urdf  manta_v2_plankton.urdf  naro_buoyancy.urdf  naro_geometric_buoyancy.urdf  stl_model.urdf
manta_v2_gazebo_ros2_control/worlds/: ocean.world  underwater.world  yolo_test.world
manta_v2_moveit_config/: CMakeLists.txt  README.md  package.xml
manta_v2_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  manta_v2.srdf  manta_v2_controllers.yaml  manta_v2_ros_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
manta_v2_moveit_config/launch/: moveit_demo.launch.py
manta_v2_run_move_group/: CMakeLists.txt  README.md  package.xml
manta_v2_run_move_group/launch/: move_group.launch.py  move_group.rviz  move_group_interface.launch.py
manta_v2_run_move_group/src/: run_move_group.cpp
